--- a/app/src/main/res/layout/activity_gestionar_turnos.xml
+++ b/app/src/main/res/layout/activity_gestionar_turnos.xml
@@ -94,7 +94,7 @@
         android:layout_marginTop="20dp" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/inputLayoutEmail"
+        android:id="@+id/inputLayoutPhone"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -103,7 +103,7 @@
         app:startIconDrawable="@drawable/outline_contact_phone_24">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/inputEmail"
+            android:id="@+id/edtxNumero"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="phone" />
