--- a/app/src/main/res/layout/activity_crear_atraccion.xml
+++ b/app/src/main/res/layout/activity_crear_atraccion.xml
@@ -17,51 +17,189 @@
         android:src="@drawable/ic_back"
         android:layout_marginTop="10dp"/>
 
-    <TextView
-        android:id="@+id/textView2"
+    <ScrollView
+        android:id="@+id/scrollOpciones"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Nombre Atraccion"
-        android:textAlignment="center"
-        android:textSize="30sp"
-        android:layout_marginTop="20dp" />
+        android:fillViewport="true">
 
-    <EditText
-        android:id="@+id/editTextNAtraccion"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Atraccion"
-        android:inputType="textCapWords"
-        android:layout_marginTop="20dp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center_horizontal">
 
-    <Button
-        android:id="@+id/btnSubirInfo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Crear Atraccion"
-        android:textSize="25dp"
-        android:textColor="@color/white"
-        android:layout_marginTop="50dp" />
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Nombre Atraccion"
+                android:textAlignment="center"
+                android:textSize="30sp"
+                android:layout_marginTop="20dp" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="?attr/colorOutline"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="8dp" />
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/inputLayoutPhone"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:hint="Ingresar nombre atracción"
+                app:startIconDrawable="@drawable/outline_assignment_24"
+                app:boxStrokeColor="@color/green">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Atracciones"
-        android:textAlignment="center"
-        android:textSize="30sp"
-        android:layout_marginTop="20dp" />
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/editTextNAtraccion"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textCapWords" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/RevListaAtraccion"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"/>
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <View
+                android:layout_width="250dp"
+                android:layout_height="1dp"
+                android:layout_gravity="center"
+                android:background="?attr/colorOutline"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="8dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Tiempo asignado por persona"
+                android:textAlignment="center"
+                android:textSize="25sp"
+                android:layout_marginTop="10dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="10dp">
+
+                <!-- Picker de minutos con etiqueta -->
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:gravity="center">
+
+                    <NumberPicker
+                        android:id="@+id/numberPickerMinutes"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:id="@+id/textMinutes"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Minutos"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        android:gravity="center"
+                        android:paddingTop="4dp"/>
+                </LinearLayout>
+
+                <!-- Espacio entre pickers -->
+                <Space
+                    android:layout_width="30dp"
+                    android:layout_height="wrap_content" />
+
+                <!-- Picker de segundos con etiqueta -->
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:gravity="center">
+
+                    <NumberPicker
+                        android:id="@+id/numberPickerSeconds"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:id="@+id/textSeconds"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Segundos"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        android:gravity="center"
+                        android:paddingTop="4dp"/>
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="250dp"
+                android:layout_height="1dp"
+                android:layout_gravity="center"
+                android:background="?attr/colorOutline"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="8dp" />
+
+            <Button
+                android:id="@+id/btnSubirInfo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/green"
+                android:text="Crear Atraccion"
+                android:textSize="25dp"
+                android:textColor="@color/white"
+                android:layout_marginTop="20dp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="?attr/colorOutline"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="8dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Atracciones"
+                android:textAlignment="center"
+                android:textSize="30sp"
+                android:layout_marginTop="20dp" />
+
+            <androidx.coordinatorlayout.widget.CoordinatorLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp">
+
+                <LinearLayout
+                    android:id="@+id/AvisoSinAtracciones"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:src="@drawable/nada"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="No hay Atracciones"
+                        android:textSize="25dp"
+                        android:textAlignment="center"/>
+
+                </LinearLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/RevListaAtraccion"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+            </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
