--- a/app/src/main/res/layout/activity_gestion_app_tv.xml
+++ b/app/src/main/res/layout/activity_gestion_app_tv.xml
@@ -20,7 +20,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Seleccionar Opcion"
+        android:text="Seleccionar Opción"
         android:textSize="25dp"
         android:layout_marginTop="40dp"
         app:layout_constraintEnd_toEndOf="parent"
