--- a/app/src/main/res/layout/atraccion_item.xml
+++ b/app/src/main/res/layout/atraccion_item.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-    android:id="@+id/ContenidoAtraccion"
+    android:id="@+id/SeleccionarAtraccion"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="300sp"
+    android:layout_width="match_parent"
     android:layout_height="100dp"
     android:layout_margin="10dp"
     android:background="@drawable/rounded_background">
