--- a/app/src/main/res/layout/textos_item.xml
+++ b/app/src/main/res/layout/textos_item.xml
@@ -3,10 +3,11 @@
     android:id="@+id/Contenido"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="300sp"
+    android:layout_width="match_parent"
     android:layout_height="100dp"
     android:layout_margin="10dp"
-    android:background="@drawable/rounded_background">
+    android:background="@drawable/rounded_background"
+    android:backgroundTint="@color/green">
 
     <TextView
         android:id="@+id/txtFechaTxt"
@@ -44,7 +45,7 @@
         android:layout_height="30dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="7dp"
-        android:src="@drawable/eliminar"
+        android:src="@drawable/outline_delete_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
