--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="cafe_transparente_25">#40603318</color>
     <color name="cafe_opaco">#F0603318</color>
     <color name="cafePrincipal">#F08343</color>
+    <color name="green">#3a6c64</color>
 </resources>
