--- a/app/src/main/res/layout/activity_gestion_app_tv.xml
+++ b/app/src/main/res/layout/activity_gestion_app_tv.xml
@@ -44,7 +44,7 @@
             android:gravity="center_horizontal">
 
             <LinearLayout
-                android:id="@+id/gestionTurnos"
+                android:id="@+id/crearAtraccion"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -52,19 +52,19 @@
                 android:layout_marginTop="50dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView">
+                app:layout_constraintTop_toBottomOf="@+id/subirTexto">
 
                 <ImageView
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:src="@drawable/turnos" />
+                    android:src="@drawable/atraccion" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Gestion Turnos"
-                    android:textSize="20dp"
-                    android:layout_marginTop="10dp"/>
+                    android:layout_marginTop="10dp"
+                    android:text="Crear Atraccion"
+                    android:textSize="20dp" />
 
             </LinearLayout>
 
@@ -119,7 +119,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/crearAtraccion"
+                android:id="@+id/agregarUsuario"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -127,19 +127,19 @@
                 android:layout_marginTop="50dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/subirTexto">
+                app:layout_constraintTop_toBottomOf="@+id/textView">
 
                 <ImageView
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:src="@drawable/atraccion" />
+                    android:src="@drawable/agregar_usuario" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:text="Crear Atraccion"
-                    android:textSize="20dp" />
+                    android:text="Agregar Usuario"
+                    android:textSize="20dp"
+                    android:layout_marginTop="10dp"/>
 
             </LinearLayout>
 
