--- a/app/src/main/res/layout/activity_gestion_app_tv.xml
+++ b/app/src/main/res/layout/activity_gestion_app_tv.xml
@@ -69,6 +69,31 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/reiniciarTurnos"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:layout_marginTop="50dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/gestionTurnos">
+
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:src="@drawable/reiniciar" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="Reiniciar Turnos"
+                    android:textSize="20dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/subirVideos"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
