--- a/app/src/main/res/layout/activity_subir_texto_firebase.xml
+++ b/app/src/main/res/layout/activity_subir_texto_firebase.xml
@@ -13,10 +13,7 @@
         android:id="@+id/atrasSubirTxt"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@drawable/ic_back"
-        android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:src="@drawable/ic_back" />
 
     <TextView
         android:layout_width="match_parent"
